change welcome message

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <p>Hello you Putz!</p>
+    <p>Welcome to our chat app!</p>
 </body>
 </html>
