--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,6 @@
     <p>Welcome to our chat app!</p>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io()
-
-        socket.on('connect', () => {
-            console.log('connected to server')
-        })
-        socket.on('disconnect', () => {
-            console.log('disconnected from server')
-        })
-    </script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
