--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,15 @@
 </head>
 <body>
     <p>Welcome to our chat app!</p>
-
+    
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Message" />
+        <button>Submit</button>
+    </form>
+    
+    <ol id="messages"></ol>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
