--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <input name="message" type="text" placeholder="Message" />
         <button>Submit</button>
     </form>
+    <button id="send-location">Send Location</button>
     
     <ol id="messages"></ol>
     <script src="/socket.io/socket.io.js"></script>
