--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,36 @@
             </form>
             <button id="send-location">Send Location</button>
         </div>
-
     </div>
-    
-    
+
+    <script id="message-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div>
+                <p>{{text}}</p>
+            </div>
+        </li>
+    </script>
+
+    <script id="location-message-template" type="text/template">
+        <li class="message">
+            <div class="message__title">
+                <h4>{{from}}</h4>
+                <span>{{createdAt}}</span>
+            </div>
+            <div>
+                <a href="{{url}}" target="_blank">My current location</a>
+            </div>
+        </li>
+    </script>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/libs/moment.js"></script>
+    <script src="/js/libs/moustache.js"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
